Background no longer bleeds into hover border

--- a/MERN Login System/src/components/Dashboard/Dash.css
+++ b/MERN Login System/src/components/Dashboard/Dash.css
@@ -40,11 +40,11 @@ html,body{
   left:0px;
   width: 100%;
   height: 100%;
-  
 }
 
 .img-display {
   position: absolute;
+  background-clip: padding-box;
   background-color: gray;
   z-index: -1;
   top:0px;
@@ -56,10 +56,13 @@ html,body{
   min-height: 100%;
 }
 
-.fa.fa-arrow-up {
+.upload-text {
   z-index: -2;
-  visibility: hidden;
+  position: absolute;
+  justify-content: right;
+  align-items: center;
 }
+
 .submit {
   background-color: #4CAF50;
   border: none;
